# lekhanai

./: .gitmodules  Contributing.md  LICENSE  README.md  docker-compose.yml  kill.sh  start.sh  🚀 COMPLETE STT SYSTEM DOCUMENTATION.md
backend/: CMakeLists.txt  README.md  entrypoint.sh  template.env
backend/analyser/: Dockerfile  app.py
backend/docker/: Dockerfile.dev
backend/include/: constants.hpp
backend/include/config/: index.hpp
backend/include/factories/: summary.processor.factory.hpp  vad.processor.factory.hpp  voice.processor.factory.hpp
backend/include/processors/: audio.processor.hpp  index.hpp  voice.processor.hpp
backend/include/processors/audio.processor/: vad.audio.processor.hpp
backend/include/processors/voice.processor/: voice.processor.hpp  whisper.voice.processor.hpp
backend/include/server/: server.hpp  webrtc.server.hpp  webrtc.signal.server.hpp
backend/include/server/webrtc/: server.hpp  signal.server.hpp
backend/include/server/websocket/: server.hpp
backend/manager/: Dockerfile  app.py  template.env
backend/manager/docker/: Dockerfile.dev
backend/manager/src/: app.py
backend/manager/src/commands/: create_session_command.py  proxy_stt_command.py  realtime_transcribe_command.py  save_audio_file_command.py  save_audio_filesystem_command.py  update_session_command.py
backend/manager/src/database/: db.py
backend/manager/src/models/: __init__.py  models.py  schemas.py
backend/manager/src/queries/: __init__.py  list_sessions_query.py  queries.py
backend/src/: main.cpp
backend/src/config/: index.cpp
backend/src/factories/: summary.processor.factory.cpp  vad.processor.factory.cpp  voice.processor.factory.cpp
backend/src/processors/: audio.processor.cpp  data.processor.cpp  index.cpp  request.processor.cpp  voice.processor.cpp
backend/src/processors/audio.processor/: audio.processor.cpp  vad.audio.processor.cpp
backend/src/processors/summary.processor/: ollama.summary.processor.cpp
backend/src/processors/vad.processor/: vad.processor.cpp
backend/src/processors/voice.processor/: voice.processor.cpp  whisper.voice.processor.cpp
backend/src/server/: server.cpp  webrtc.server.cpp  webrtc.signal.server.cpp
backend/src/server/webrtc/: server.cpp  signal.server.cpp
backend/src/server/websocket/: server.cpp
backend/stt/: CMakeLists.txt  entrypoint.sh  template.env
backend/stt/docker/: Dockerfile.dev
backend/stt/include/: constants.hpp
backend/stt/include/factories/: voice.processor.factory.hpp
backend/stt/include/processors/: request.processor.hpp
backend/stt/include/processors/audio.processor/: audio.processor.hpp  vad.audio.processor.hpp
backend/stt/include/processors/summary.processor/: ollama.summary.processor.hpp  summary.processor.hpp
backend/stt/include/processors/vad.processor/: silero.vad.processor.hpp  vad.processor.hpp
backend/stt/include/processors/voice.processor/: voice.processor.hpp
backend/stt/include/server/: server.hpp
backend/stt/include/server/http/: server.hpp
backend/stt/include/server/webrtc/: server.hpp  signal.server.hpp
backend/stt/include/server/websocket/: server.hpp
backend/stt/src/: main.cpp
backend/stt/src/factories/: vad.processor.factory.cpp
backend/stt/src/processors/: request.processor.cpp
backend/stt/src/processors/audio.processor/: vad.audio.processor.cpp
backend/stt/src/processors/summary.processor/: summary.processor.cpp
backend/stt/src/processors/vad.processor/: silero.vad.processor.cpp
backend/stt/src/processors/voice.processor/: voice.processor.cpp
backend/stt/src/server/: server.cpp
backend/stt/src/server/http/: server.cpp
backend/stt/src/server/webrtc/: server.cpp
backend/stt/src/server/websocket/: server.cpp
frontend/: index.html  kill.sh  package.json  pnpm-lock.yaml  start.sh
frontend/docker/: Dockerfile.dev
frontend/src/: App.css  App.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: audio_capture.rs  audio_engine.rs  lib.rs
frontend/src/components/: AudioSourceSelector.css  AudioSourceSelector.jsx  ControlPanel.css  ControlPanel.jsx  Header.css  Header.jsx  TranscriptionDisplay.css  TranscriptionDisplay.jsx
